# airflow_dags

./: .gitignore  .pdm-python  README.md  airflow.cfg  pyproject.toml
dags/: '  movie_E.py  movie_E1.py  movie_E2.py  movie_E3.py  movie_T.py
src/airflow_dags/: ib.py
src/airflow_dags.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
